tests/should-fail/double-div-division.ls
main = div 10.0 3.0;
